force-app/main/default/objects/Interchangeable_Part__c/Interchangeable_Part__c.object-meta.xml
<CustomObject>
    <label>Interchangeable Part</label>
    <nameField>
        <label>Interchangeable Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interchangeable Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>