force-app/main/default/objects/Interchangeable_Part__c/fields/Child_Item__c.field-meta.xml
<CustomField>
    <fullName>Child_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second part in the pair</description>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Interchangeable Parts (Child Item)</relationshipLabel>
    <relationshipName>Interchangeable_Parts_Child</relationshipName>
    <type>Lookup</type>
</CustomField>