force-app/main/default/objects/Interchangeable_Part__c/fields/Child_SAP_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Child_SAP_Part_Number__c</fullName>
    <formula>Child_Item__r.SAP_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child SAP Part Number</label>
    <type>Text</type>
</CustomField>