force-app/main/default/objects/Interchangeable_Part__c/fields/Interchangeable_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Interchangeable_Part_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name &amp; &quot;_&quot; &amp; IF(ISBLANK(Child_Item__c), &quot;&quot;, Child_Item__r.Name) &amp; &quot;_&quot; &amp; IF(ISBLANK(Parent_Item__c), &quot;&quot;, Parent_Item__r.Name), &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interchangeable Part Name</label>
    <type>Text</type>
</CustomField>