force-app/main/default/objects/Interchangeable_Part__c/fields/Merged_Card_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Merged_Card_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merged Card Indicator</label>
    <type>Checkbox</type>
</CustomField>