force-app/main/default/objects/Interchangeable_Part__c/fields/Merged_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Merged_Card_Type__c</fullName>
    <label>Merged Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WT</fullName>
            </value>
            <value>
                <fullName>XR</fullName>
            </value>
            <value>
                <fullName>WR</fullName>
                <isActive>false</isActive>
                <label>WR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>