force-app/main/default/objects/Interchangeable_Part__c/fields/Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Item__c</fullName>
    <description>First part in the pair</description>
    <label>Parent Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Interchangeable Parts</relationshipLabel>
    <relationshipName>Interchangeable_Parts_Parent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>