force-app/main/default/objects/Interchangeable_Part__c/fields/Parent_SAP_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_SAP_Part_Number__c</fullName>
    <formula>Parent_Item__r.SAP_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent SAP Part Number</label>
    <type>Text</type>
</CustomField>