force-app/main/default/objects/Interchangeable_Part__c/fields/Two_Way_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Two_Way_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Way Indicator</label>
    <type>Checkbox</type>
</CustomField>