force-app/main/default/objects/Interchangeable_Part__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Item__c</columns>
    <columns>Child_Item__c</columns>
    <columns>Merged_Card_Type__c</columns>
    <columns>Two_Way_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>